--- a/files/login/login.html
+++ b/files/login/login.html
@@ -54,8 +54,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-6">
-                                    <div class="form-check text-extra-small weight-500">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                                    <div class="form-check text-extra-small weight-500 d-flex align-items-center">
+                                        <input class="form-check-input-new" type="checkbox" value="" id="flexCheckChecked">
                                         <label class="form-check-label" for="flexCheckChecked">
                                             Stay logged in
                                         </label>
